--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
   ],
   "dependencies": {
     "akreet-http-util": "akreet/akreet-http-util",
-    "tv4": "geraintluff/tv4#^1.2.7"
+    "tv4": "geraintluff/tv4#^1.2.7",
+    "lodash": "^4.16.6"
   }
 }
